# nev1xta-OOP_labs

laba1/: CMakeLists.txt  main.cpp
laba1/include/: def.h
laba1/src/: def.cpp
laba1/test/: tests01.cpp
laba2/: CMakeLists.txt  README.md  main.cpp
laba2/include/: customVector.h  five.h
laba2/src/: customVector.cpp  five.cpp
laba2/test/: test.cpp
laba2/tests/: FiveTest.cpp
laba3/: CMakeLists.txt
laba3/include/: hexagon.h  octagon.h  pentagon.h
laba3/src/: figure.cpp  hexagon.cpp  main.cpp  octagon.cpp  pentagon.cpp
laba3/tests/: test_figures.cpp  test_vectors.cpp
laba4/: CMakeLists.txt
laba4/include/: three.h  three.ipp
laba4/src/: main.cpp
laba4/test/: figure_test.cpp
laba5/: CMakeLists.txt
laba5/include/: allocator.hpp  queue.hpp  queue.ipp
laba5/src/: allocator.cpp  main.cpp
laba5/test/: main_test.cpp
laba6/: CMakeLists.txt  main.cpp
laba6/include/: dragon.hpp  knight.hpp  npc.hpp  pegasus.hpp
laba6/src/: dragon.cpp  knight.cpp  pegasus.cpp
laba6/test/: main_test.cpp
